fix: overflow-x hidden

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ main {
 #mutant_text, #choice_container, #image_container, #tasks_container {
   position:relative;
   transition-timing-function:ease-in-out;
+  overflow-x:hidden;
   overflow-y:hidden;
   transition:width 0.5s, height 0.5s, opacity 0.5s;
 }
